<resources>
    <string name="app_name">Android-DLNA</string>
    <string name="search">查找设备</string>

    <string name="searching_LAN">查找局域网中的Upnp设备…</string>
    <string name="enabling_router">开启路由…</string>
    <string name="disabling_router">关闭路由…</string>
    <string name="error_switching_router">Error switching router: </string>
    <string name="device_not_available">正在查找设备详情,请稍后.</string>

    <string name="device_details">Device Details</string>
    <string name="OK">确定</string>

    <string name="select_render">请选择播放设备</string>

    <string name="separate"> / </string>
    <string name="init_time">0:00:00</string>
    <string name="add"> + </string>
    <string name="subtract"> - </string>
    <string name="current_volume">当前音量：</string>
</resources>
